--- a/l10n/bn-BD/viewer.properties
+++ b/l10n/bn-BD/viewer.properties
@@ -90,15 +90,18 @@ document_properties_version=পিডিএফ সংষ্করণ:
 document_properties_page_count=মোট পাতা:
 document_properties_close=বন্ধ
 
+print_progress_message=মুদ্রণের জন্য নথি প্রস্তুত করা হচ্ছে…
 # LOCALIZATION NOTE (print_progress_percent): "{{progress}}" will be replaced by
 # a numerical per cent value.
 print_progress_percent={{progress}}%
+print_progress_close=বাতিল
 
 # Tooltips and alt text for side panel toolbar buttons
 # (the _label strings are alt text for the buttons, the .title strings are
 # tooltips)
 toggle_sidebar.title=সাইডবার টগল করুন
 toggle_sidebar_label=সাইডবার টগল করুন
+document_outline.title=নথির আউটলাইন দেখাও (সব আইটেম প্রসারিত/সঙ্কুচিত করতে ডবল ক্লিক করুন)
 document_outline_label=নথির রূপরেখা
 attachments.title=সংযুক্তি দেখাও
 attachments_label=সংযুক্তি
