--- a/l10n/hi-IN/viewer.properties
+++ b/l10n/hi-IN/viewer.properties
@@ -26,6 +26,7 @@ of_pages={{pagesCount}} का
 # LOCALIZATION NOTE (page_of_pages): "{{pageNumber}}" and "{{pagesCount}}"
 # will be replaced by a number representing the currently visible page,
 # respectively a number representing the total number of pages in the document.
+page_of_pages=({{pageNumber}} of {{pagesCount}})
 
 zoom_out.title=\u0020छोटा करें
 zoom_out_label=\u0020छोटा करें
@@ -90,6 +91,7 @@ document_properties_version=PDF संस्करण:
 document_properties_page_count=पृष्ठ गिनती:
 document_properties_close=बंद करें
 
+print_progress_message=छपाई के लिए दस्तावेज़ को तैयार किया जा रहा है...
 # LOCALIZATION NOTE (print_progress_percent): "{{progress}}" will be replaced by
 # a numerical per cent value.
 print_progress_percent={{progress}}%
@@ -100,6 +102,7 @@ print_progress_close=रद्द करें
 # tooltips)
 toggle_sidebar.title=\u0020स्लाइडर टॉगल करें
 toggle_sidebar_label=स्लाइडर टॉगल करें
+document_outline.title=दस्तावेज़ की रूपरेखा दिखाइए (सारी वस्तुओं को फलने अथवा समेटने के लिए दो बार क्लिक करें)
 document_outline_label=दस्तावेज़ आउटलाइन
 attachments.title=संलग्नक दिखायें
 attachments_label=संलग्नक
